--- a/dlt_restack_demo/restack-app/pyproject.toml
+++ b/dlt_restack_demo/restack-app/pyproject.toml
@@ -13,11 +13,12 @@ packages = [{include = "src"}]
 python = ">=3.9,<3.13"
 watchfiles = "^1.0.0"
 pydantic = "^2.10.4"
-dlt = "^1.5.0"
-duckdb = ">=0.9"
 
 # Build system configuration
 restack-ai = "^0.0.52"
+dlt = "^1.5.0"
+weaviate-client = "3.22"
+openai = "^1.60.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
