--- a/dlt_restack_demo/restack-app/pyproject.toml
+++ b/dlt_restack_demo/restack-app/pyproject.toml
@@ -1,32 +1,29 @@
-# Project metadata
-[tool.poetry]
-name = "quickstart"
+[project]
+name = "restack-app"
 version = "0.0.1"
-description = "A quickstart for Restack"
-authors = [
-    "Restack Team <service@restack.io>",
+description = "A quickstart for Restack with dlt"
+authors = [{ name = "Restack Team", email = "service@restack.io" }]
+requires-python = ">=3.10,<3.13"
+dependencies = [
+    "pydantic>=2.10.6",
+    "watchfiles>=1.0.4",
+    "python-dotenv==1.0.1",
+    "openai>=1.61.0",
+    "restack-ai>=0.0.62",
+    "dlt>=1.5.0",
+    "weaviate-client==3.22"
 ]
-readme = "README.md"
-packages = [{include = "src"}]
 
-[tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-watchfiles = "^1.0.0"
-pydantic = "^2.10.4"
-
-# Build system configuration
-restack-ai = "^0.0.52"
-dlt = "^1.5.0"
-weaviate-client = "3.22"
-openai = "^1.60.2"
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-# CLI command configuration
-[tool.poetry.scripts]
+[project.scripts]
 dev = "src.services:watch_services"
 services = "src.services:run_services"
-schedule = "schedule_workflow:run_schedule_workflow"
-interval = "schedule_interval:run_schedule_interval"
-calendar = "schedule_calendar:run_schedule_calendar"
+
+[tool.hatch.build.targets.sdist]
+include = ["src"]
+
+[tool.hatch.build.targets.wheel]
+include = ["src"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
