--- a/dlt-debezium-demo/docker-compose.yml
+++ b/dlt-debezium-demo/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # Source PostgreSQL database
   postgres_source:
-    image: postgres:15-alpine
+    image: postgres:15.5-alpine
     container_name: postgres_source_event_driven
     ports:
       - "5432:5432"
@@ -34,7 +34,7 @@ services:
 
   # Source MySQL database
   mysql_source:
-    image: mysql:8.0
+    image: mysql:8.0.37
     container_name: mysql_source_event_driven
     ports:
       - "3306:3306"
@@ -57,6 +57,35 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  # Change Data Capture Pipeline: Debezium (Java) + dlt (Python)
+  # Captures database changes and loads them into DuckDB
+  debezium_dlt_pipeline:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: debezium_dlt_pipeline_event_driven
+    # Run interactively by default (can override with docker-compose run)
+    stdin_open: true
+    tty: true
+    # Note: Configuration comes from .dlt/secrets.toml (mounted volume)
+    # The scripts use dlt.secrets.get() to read config, not environment variables
+    volumes:
+      # Mount .dlt directory for configuration and data persistence
+      - ./.dlt:/app/.dlt
+      # Mount scripts for easy updates without rebuild
+      - ./debezium_dlt_loader.py:/app/debezium_dlt_loader.py
+      - ./debezium_dlt_loader_mysql.py:/app/debezium_dlt_loader_mysql.py
+      - ./config_helper_universal.py:/app/config_helper_universal.py
+    depends_on:
+      postgres_source:
+        condition: service_healthy
+      mysql_source:
+        condition: service_healthy
+    # Don't start automatically - user will run it manually
+    # Usage: docker-compose --profile cdc run --rm debezium_dlt_pipeline
+    profiles:
+      - cdc
 
 volumes:
   postgres_data_event_driven:
